2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/src/exinit.c: Eliminate _CPU_Thread_dispatch_pointer and passing
	address of _Thread_Dispatch to _CPU_Initialize. Clean up comments.

2009-02-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1374/misc
	* libmisc/stackchk/check.c: Fix printk formatting string.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/src/exinit.c: Interrupts are guaranteed to be disabled by
	boot_card(), do not do it here as well.

2009-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/sys/kernel.h: Remove PSEUDO_* 
	(Unused, not in FreeBSD).
	* libnetworking/sys/kernel.h: Remove struct linker_set (Unused).
	* libnetworking/net/if_loop.c: Remove PSEUDO_SET (Unused).
	* libnetworking/kern/uipc_domain.c: Remove domain_set (Unused).
	* libnetworking/sys/kernel.h: Remove execsw_set,
	si_elem_t (Unused, not in FreeBSD).
	#include <sys/linker_set.h>.
	Add #ifdef _KERNEL guards (From FreeBSD).

2009-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/sys/kernel.h: Remove hostnamelen, domainnamelen,
	lbolt, tickdelta, timedelta (Unused, not in FreeBSD).

2009-02-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/vm/vm.h: Cosmetics from FreeBSD.
	* libnetworking/rtems/rtems_bsdnet_internal.h: Remove struct
	vm_page, vm_page_t, boolean_t (Unused).
	* libnetworking/nfs/bootp_subr.c, 
	libnetworking/nfsclient/nfsdiskless.h:
	Cosmetics from FreeBSD.
	* libnetworking/rtems/rtems_bsdnet_internal.h:
	Remove struct file (Unused).

2009-02-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/sys/socketvar.h: Remove struct file,
	soo_ioctl, soo_select, soo_stat, getsock (Unused).

2009-02-06	Ralf Corsépius <ralf.corsepius@rtems.org>
	* posix/include/sched.h, posix/src/sched_getparam.c: 
	Make sched_getparam() POSIX compliant.

2009-02-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Don't install libcsupport/include/tar.h.
