@@ -1,3 +1,9 @@
+2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* sapi/include/rtems/config.h, score/include/rtems/score/thread.h,
+	score/src/threadidlebody.c: Change prototype of IDLE thread to
+	consistently return void * and take a uintptr_t argument.
+
 2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* sapi/src/exinit.c: Eliminate _CPU_Thread_dispatch_pointer and passing
